--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BB Blog
 SEOTitle: 奔奔的博客 | BY Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-rwd.jpg
 email: 1239738499@qq.com
 description: "Every failure is leading towards success."
 keyword: "BB, BB Blog, 奔奔的博客, benben, Python, Machine Learning, Deep Learning, CV, NLP"
