--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: BB Blog
-SEOTitle: 奔奔的博客 | BY Blog
+SEOTitle: 奔奔的博客 | BB Blog
 header-img: img/post-bg-rwd.jpg
 email: 1239738499@qq.com
 description: "Every failure is leading towards success."
